Add a results page and fix landing page styling.

--- a/templates/about.html
+++ b/templates/about.html
@@ -1,16 +1,16 @@
 <!DOCTYPE html>
 <html>
 <head>
+    <meta charset="UTF-8">
+    <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <title>About Us - Garage Sale Organizer</title>
-    <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
+    <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
+
 </head>
 <body>
     <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
             <a class="navbar-brand" href="/">Garage Sale Organizer</a>
-<!--            <button class="navbar-toggler" type="button" data-bs-toggle="collapse" data-bs-target="#navbarNav" aria-controls="navbarNav" aria-expanded="false" aria-label="Toggle navigation">-->
-<!--                <span class="navbar-toggler-icon"></span>-->
-<!--            </button>-->
             <div class="collapse navbar-collapse" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
@@ -18,9 +18,6 @@
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="/about">About Us</a>
-                    </li>
-                    <li class="nav-item">
-                        <a class="nav-link" href="/contact">Contact</a>
                     </li>
                 </ul>
             </div>
@@ -47,6 +44,8 @@
                         <div class="card-body">
                             <h6 class="card-title">Kushal S. Kale</h6>
                             <p class="card-text">Student</p>
+                            <p class="card-text">ksk7657@rit.edu</p>
+                            <p class="card-text">585-4980463</p>
                         </div>
                     </div>
                 </div>
@@ -56,6 +55,8 @@
                         <div class="card-body">
                             <h6 class="card-title">Dr. Thomas Kinsman</h6>
                             <p class="card-text">Capstone Advisor</p>
+                            <p class="card-text">thomask@rit.edu</p>
+                            <p class="card-text">585-475-5188</p>
                         </div>
                     </div>
                 </div>
@@ -79,7 +80,6 @@
                     <ul class="list-unstyled">
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About Us</a></li>
-                        <li><a href="/contact">Contact</a></li>
                         <li><a href="/faq">FAQ</a></li>
                     </ul>
                 </div>
