Add geospatial query and fix UI

--- a/templates/about.html
+++ b/templates/about.html
@@ -39,24 +39,30 @@
             <h2>Our Team</h2>
             <div class="row">
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card mb-4">
                         <img src="/images/1642479650485.jpeg" class="card-img-top" alt="Student">
                         <div class="card-body">
                             <h6 class="card-title">Kushal S. Kale</h6>
-                            <p class="card-text">Student</p>
-                            <p class="card-text">ksk7657@rit.edu</p>
-                            <p class="card-text">585-4980463</p>
+                            <ul><li><p class="card-text">Student</p></li></ul>
+                            <ul><li><p class="card-text">ksk7657@rit.edu</p></li></ul>
+                            <ul><li><p class="card-text">585-4980463</p></li></ul>
+                        </div>
+                        <div class="card-footer ">
+                            <a href="https://www.linkedin.com/in/kalekushal/" class="btn btn-primary btn-block" target="_blank">Connect on LinkedIn</a>
                         </div>
                     </div>
                 </div>
                 <div class="col-md-4">
-                    <div class="card">
+                    <div class="card mb-4">
                         <img src="/images/getphotoid.jpeg" class="card-img-top" alt="Capstone Advisor">
                         <div class="card-body">
                             <h6 class="card-title">Dr. Thomas Kinsman</h6>
-                            <p class="card-text">Capstone Advisor</p>
-                            <p class="card-text">thomask@rit.edu</p>
-                            <p class="card-text">585-475-5188</p>
+                            <ul><li><p class="card-text">Capstone Advisor</p></li></ul>
+                            <ul><li><p class="card-text">thomask@rit.edu</p></li></ul>
+                            <ul><li><p class="card-text">585-475-5188</p></li></ul>
+                        </div>
+                        <div class="card-footer ">
+                            <a href="https://www.linkedin.com/in/thomas-kinsman-991ba51a/" class="btn btn-primary btn-block" target="_blank">Connect on LinkedIn</a>
                         </div>
                     </div>
                 </div>
@@ -77,7 +83,7 @@
                     </form>
                 </div>
                 <div class="col-md-6">
-                    <ul class="list-unstyled">
+                    <ul class="list">
                         <li><a href="/">Home</a></li>
                         <li><a href="/about">About Us</a></li>
                         <li><a href="/faq">FAQ</a></li>
