--- a/templates/error.html
+++ b/templates/error.html
@@ -46,7 +46,7 @@
           </form>
         </div>
         <div class="col-md-6">
-          <ul class="list-unstyled">
+          <ul class="list">
             <li><a href="/">Home</a></li>
             <li><a href="/about">About Us</a></li>
             <li><a href="/faq">FAQ</a></li>
