--- a/templates/landing.html
+++ b/templates/landing.html
@@ -33,16 +33,16 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <div class="col-md-9">
-                <a class="navbar-brand" href="/">Garage Sale Organizer</a>
+            <div class="col-md-10">
+                <a class="navbar-brand" href="{{ url_for('index') }}">Garage Sale Organizer</a>
             </div>
-            <div class="collapse navbar-collapse col-md-3" id="navbarNav">
+            <div class="collapse navbar-collapse col-md-2" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
-                        <a class="nav-link" href="/">Home</a>
+                        <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
-                        <a class="nav-link" href="/about">About Us</a>
+                        <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
                     </li>
                 </ul>
             </div>
@@ -52,7 +52,7 @@
   <header class="bg-primary text-white text-center py-5">
     <h1>Discover Hidden Treasures Near You!</h1>
     <p class="lead">Find the best garage sales in your area and score great deals.</p>
-    <form method="GET" action='/search' mb-3>
+    <form method="GET" action="{{ url_for('search') }}" mb-3>
       <div class="input-group">
         <input type="text" name="location" class="form-control" placeholder="Enter ZIP code" required pattern="[0-9]{5}">
         <button type="submit" class="btn btn-warning">Find Sales Near Me</button>
@@ -63,7 +63,7 @@
 
    <div class="container" style="margin-top: 5px;">
         <div class="row">
-            <form action="/search" method="get">
+            <form action="{{ url_for('search') }}" method="get">
                 <div class="form-group">
                     <div id="map" style="height:400px;width:100%"></div>
                     <label for="location">Location:</label>
@@ -97,8 +97,8 @@
                 </div>
                 <div class="col-md-6">
                     <ul class="list">
-                        <li><a href="/">Home</a></li>
-                        <li><a href="/about">About Us</a></li>
+                        <li><a href="{{ url_for('index') }}">Home</a></li>
+                        <li><a href="{{ url_for('about') }}">About Us</a></li>
                         <li><a href="/faq">FAQ</a></li>
                     </ul>
                 </div>
