--- a/templates/landing.html
+++ b/templates/landing.html
@@ -8,7 +8,7 @@
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
   <script src="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/js/bootstrap.min.js"></script>
-  <script src="https://maps.googleapis.com/maps/api/js?key=AIzaSyDSgw5nZEK3PiL6tHbI761u3e4ATKVWVI4&callback=initMap"async defer></script>
+  <script src="https://maps.googleapis.com/maps/api/js?key={{ maps_api_key }}&callback=initMap"async defer></script>
   <script>
     function initMap() {
         var map = new google.maps.Map(document.getElementById('map'), {
@@ -33,16 +33,19 @@
 <body>
   <nav class="navbar navbar-expand-lg navbar-light bg-light">
         <div class="container">
-            <div class="col-md-10">
+            <div class="col-md-9">
                 <a class="navbar-brand" href="{{ url_for('index') }}">Garage Sale Organizer</a>
             </div>
-            <div class="collapse navbar-collapse col-md-2" id="navbarNav">
+            <div class="collapse navbar-collapse col-md-3" id="navbarNav">
                 <ul class="navbar-nav ml-auto">
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('index') }}">Home</a>
                     </li>
                     <li class="nav-item">
                         <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
+                    </li>
+                    <li class="nav-item">
+                        <a class="nav-link btn btn-warning btn-block" href="{{ url_for('create') }}"> Host a Sale!</a>
                     </li>
                 </ul>
             </div>
@@ -98,8 +101,8 @@
                 <div class="col-md-6">
                     <ul class="list">
                         <li><a href="{{ url_for('index') }}">Home</a></li>
-                        <li><a href="{{ url_for('about') }}">About Us</a></li>
-                        <li><a href="/faq">FAQ</a></li>
+                        <li><a href="href="{{ url_for('about') }}"">About Us</a></li>
+                        <li><a href="{{ url_for('create') }}">Create Sale!</a></li>
                     </ul>
                 </div>
             </div>
