--- a/templates/error.html
+++ b/templates/error.html
@@ -19,8 +19,14 @@
             <a class="nav-link" href="{{ url_for('about') }}">About Us</a>
           </li>
           <li class="nav-item">
-                        <a class="nav-link btn btn-warning btn-block" href="{{ url_for('create') }}"> Host a Sale!</a>
-                    </li>
+            <a class="nav-link" href="{{ url_for('profile') }}">My Profile</a>
+          </li>
+          <li class="nav-item">
+            <a class="nav-link btn btn-warning btn-block" href="{{ url_for('create') }}"> Host a Sale!</a>
+          </li>
+          <li>
+            <a class="nav-link" href="{{ url_for('logout') }}">Logout</a>
+          </li>
         </ul>
       </div>
     </div>
