--- a/templates/profile.html
+++ b/templates/profile.html
@@ -3,7 +3,7 @@
 <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Garage Sale Search Results - Garage Sale Organizer</title>
+    <title>User Profile - Garage Sale Organizer</title>
     <link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/4.5.2/css/bootstrap.min.css">
 </head>
 <body>
@@ -33,8 +33,7 @@
     </nav>
 
     <header class="bg-primary text-white text-center py-5">
-        <h1>Garage Sale Search Results</h1>
-        <p class="lead">Discover the best garage sales near your location.</p>
+        <h1>{{ user.username }}</h1>
     </header>
 
     {% with messages = get_flashed_messages(with_categories=true) %}
@@ -48,30 +47,54 @@
     {% endwith %}
 
     <main class="container mt-5">
-        <section class="results-section">
-            <h4 class="mb-4 text-secondary">Found {{ number_of_sales }} results..</h4>
-            <div class="row">
-                {% for sale, event_image in combined %}
-                <div class="col-md-4">
-                    <div class="card mb-4">
-                        <img src="data:{{ sale.image_mimetype }};base64,{{ event_image }}" class="card-img-top" alt="{{ sale.name }}">
-                        <div class="card-body">
-                            <h5 class="card-title text-dark">{{ sale.name }}</h5>
-                            <p class="card-text text-secondary">Date: {{ sale.date }}</p>
-                            <p class="card-text text-secondary">Location: {{ sale.location["coordinates"] }}</p>
-                            <p class="card-text text-secondary">ID: {{ sale._id }}</p>
-                        </div>
-                        <div class="card-footer ">
-                            <a href="{{ url_for('event', event_id=sale._id) }}" class="btn btn-primary btn-block">View Details</a>
-                        </div>
+    <section class="user-profile">
+        <div class="row">
+            <h5 class="text-dark col-md-12">Your Profile</h5>
+            <br>
+            <div class="col-md-6">
+                <img src="data:{{ user.image_mimetype }};base64,{{ user.image_data }}" class="img-fluid" alt="{{ user.username }}">
+            </div>
+            <div class="col-md-6">
+                <div class="card mb-4">
+                    <div class="card-body">
+                        <h5 class="card-title text-dark">ID: {{ user.user_id }}</h5>
+                        <p class="card-text text-dark"><b>Username:</b> {{ user.username }}</p>
+                        <p class="card-text text-dark"><b>Name:</b> {{ user.first_name }} {{ user.last_name }}</p>
+                        <p class="card-text text-dark"><b>Email:</b> {{ user.email }}</p>
+                        <p class="card-text text-dark"><b>Address:</b> {{ user.address }}</p>
+                        <p class="card-text text-dark"><b>Phone:</b> {{ user.phone_number }}</p>
                     </div>
                 </div>
-                {% endfor %}
             </div>
-        </section>
+        </div>
+    </section>
+    <section class="user-events">
+        <h5 class="text-dark">Your Events</h5>
+        <div class="card mb-4">
+            <div class="card-body">
+                <table class="table">
+                    <thead>
+                        <tr>
+                            <th>ID</th>
+                            <th>Name</th>
+                        </tr>
+                    </thead>
+                    <tbody>
+                        {% for event in user.events %}
+                        <tr>
+                            <td>{{ event._id }}</td>
+                            <td>{{ event.name }}</td>
+                        </tr>
+                        {% endfor %}
+                    </tbody>
+                </table>
+            </div>
+        </div>
+    </section>
     </main>
 
-    <footer class="bg-light mt-5 py-4">
+
+     <footer class="bg-light mt-5 py-4">
         <div class="container">
             <div class="row">
                 <div class="col-md-6">
@@ -84,7 +107,7 @@
                     </form>
                 </div>
                 <div class="col-md-6">
-                    <ul class="list">
+                    <ul class="list-unstyled">
                         <li><a href="{{ url_for('index') }}">Home</a></li>
                         <li><a href="{{ url_for('about') }}">About Us</a></li>
                         <li><a href="{{ url_for('create') }}">Create Sale!</a></li>
