--- a/templates/register.html
+++ b/templates/register.html
@@ -81,6 +81,10 @@
                                 <input type="text" name="phone_number" class="form-control" id="phone_number" required pattern="[0-9]{3}-[0-9]{3}-[0-9]{4}" title="Please enter a valid phone number (e.g., 123-456-7890)">
                                 <div class="invalid-feedback">Please enter a valid phone number in the format xxx-xxx-xxxx.</div>
                             </div>
+<!--                            <div class="mb-3">-->
+<!--                                <label for="user_image" class="form-label">Event Image</label>-->
+<!--                                <input type="file" name="user_image" class="form-control" id="user_image" accept="image/jpeg">-->
+<!--                            </div>-->
                             <button type="submit" class="btn btn-primary btn-block">Register</button>
                         </form>
                     </div>
