--- a/templates/create.html
+++ b/templates/create.html
@@ -3,7 +3,7 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Garage Sale Organizer</title>
+  <title>Create Event - Garage Sale Organizer</title>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -11,7 +11,7 @@
   <script src="https://maps.googleapis.com/maps/api/js?key={{ maps_api_key }}&callback=initMap"async defer></script>
   <script>
     function initMap() {
-        var map = new google.maps.Map(document.getElementById('map'), {
+        var map = new google.maps.Map(document.getElementById('mapDiv'), {
             center: {lat: 35.224504610, lng: -80.84564},
             zoom: 10
         });
@@ -97,7 +97,7 @@
                                 <input type="time" name="event_time" class="form-control" id="event_time" required>
                             </div>
                             <div class="form-group">
-                                <div id="map" style="height:400px;width:100%"></div>
+                                <div id="mapDiv" style="height:400px;width:100%"></div>
                                 <label for="event_location">Location:</label>
                                 <input type="text" class="form-control" id="event_location" name="event_location" required>
                             </div>
