--- a/templates/landing.html
+++ b/templates/landing.html
@@ -4,6 +4,7 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Garage Sale Organizer</title>
+  <link rel="icon" type="image/x-icon" href="/images/favicon.png"/>
   <!-- Bootstrap CSS -->
   <link rel="stylesheet" href="https://cdn.jsdelivr.net/npm/bootstrap@5.0.0/dist/css/bootstrap.min.css">
   <script src="https://code.jquery.com/jquery-3.6.0.min.js"></script>
@@ -87,6 +88,10 @@
                     <div id="map" style="height:400px;width:100%"></div>
                     <label for="location">Location:</label>
                     <input type="text" class="form-control" id="location" name="location">
+                </div>
+                <div class="form-group">
+                    <label for="date">Date:</label>
+                    <input type="date" class="form-control" id="date" name="date">
                 </div>
                 <button style="margin-top: 10px;" type="submit" class="btn btn-warning">Find Sales Near Me</button>
             </form>
